Failed assert when generating scene preview #87701

Closed
opened 2021-04-22 11:07:11 +02:00 by Julian Eisel · 6 comments
Member

System Information
Operating system: Linux-5.11.0-7612-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: Radeon Vega Frontier Edition (VEGA10, DRM 3.40.0, 5.11.0-7612-generic, LLVM 11.0.0) AMD 4.6 (Core Profile) Mesa 21.0.0

Blender Version
Broken: version: 3.0.0 Alpha, 33d9a0c951

Likely caused by 50782df425.

Short description of error

BLI_assert failed: source/blender/render/intern/engine.c:151, engine_depsgraph_free(), at '!BLI_thread_is_main()'

The scene preview runs on the main thread, so it makes sense that the assert fails.

Exact steps for others to reproduce the error

  • Factory startup in a debug build
  • Right click the scene selector in the top-bar
  • Press Mark Asset

Or:

  • Factory startup in a debug build
  • {nav File > Data Previews > Refresh Data-block Previews}
**System Information** Operating system: Linux-5.11.0-7612-generic-x86_64-with-glibc2.32 64 Bits Graphics card: Radeon Vega Frontier Edition (VEGA10, DRM 3.40.0, 5.11.0-7612-generic, LLVM 11.0.0) AMD 4.6 (Core Profile) Mesa 21.0.0 **Blender Version** Broken: version: 3.0.0 Alpha, 33d9a0c951 Likely caused by 50782df4258. **Short description of error** ``` BLI_assert failed: source/blender/render/intern/engine.c:151, engine_depsgraph_free(), at '!BLI_thread_is_main()' ``` The scene preview runs on the main thread, so it makes sense that the assert fails. **Exact steps for others to reproduce the error** * Factory startup in a debug build * Right click the scene selector in the top-bar * Press `Mark Asset` Or: * Factory startup in a debug build * {nav File > Data Previews > Refresh Data-block Previews}
Author
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

#87534 was marked as duplicate of this issue

#87534 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by f240b5e5f7

This issue was referenced by f240b5e5f712d375c82763057c1c29e95d011ca5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-04-22 15:24:15 +02:00

Added subscribers: @ankitm, @mano-wii, @brecht

Added subscribers: @ankitm, @mano-wii, @brecht
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87701
No description provided.