Fix T87701: debug assert generating scene preview render